testsuite/tests/th/T15362.stderr

T15362.hs:8:10: error:
    • Mismatched type name in type family instance.
        Expected: +
          Actual: Maybe
      In the declaration for type family ‘+’
    • In the Template Haskell quotation
        [d| type family a + b where
              Maybe Zero b = b
              Succ a + b = Succ (a + b) |]
